--- a/.github/workflows/喜马拉雅.yml
+++ b/.github/workflows/喜马拉雅.yml
@@ -24,4 +24,6 @@ jobs:
         run: python3 xmly_speed.py 
         env:
             XMLY_SPEED_COOKIE: ${{ secrets.XMLY_SPEED_COOKIE }}
+            TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+            TG_USER_ID: ${{ secrets.TG_USER_ID }}
     
